add cosmetic for Home page

--- a/node-note/src/styles/globals.css
+++ b/node-note/src/styles/globals.css
@@ -25,3 +25,13 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.transbg {
+  min-height: 100vh;
+  background-color: transparent;
+}
+
+.mainbg {
+  min-height: 100vh;
+  background-image: linear-gradient(180deg, #545e7c , #2025b6 );
+}
