HeadNavBae, fix Home, fix globall

--- a/node-note/src/styles/globals.css
+++ b/node-note/src/styles/globals.css
@@ -18,20 +18,16 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 .transbg {
-  min-height: 100vh;
+
   background-color: transparent;
 }
 
 .mainbg {
-  min-height: 100vh;
-  background-image: linear-gradient(180deg, #545e7c , #2025b6 );
+  background-image: linear-gradient(180deg, #545e7c, #2025b6);
 }
