update graph bg

--- a/node-note/src/styles/globals.css
+++ b/node-note/src/styles/globals.css
@@ -34,3 +34,10 @@
 div.vis-network {
   border: solid black thin;
 }
+
+canvas {
+  background-color: white;
+}
+
+.graphbg {
+  background: linear-gradient(90deg, rgb(134, 154, 183), rgb(87, 87, 229));}
